--- a/HeThongBanDienThoai_Admin/Properties/Resources.resx
+++ b/HeThongBanDienThoai_Admin/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="back_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\RESOURCE\Icons\back_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="thumbtopzone2_800x450-600x400" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\RESOURCE\Logo\thumbtopzone2_800x450-600x400.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="image-icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\RESOURCE\Icons\image-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -142,7 +145,7 @@
   <data name="logo_topzonePanel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\RESOURCE\Logo\logo_topzonePanel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="thumbtopzone2_800x450-600x400" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\RESOURCE\Logo\thumbtopzone2_800x450-600x400.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="log-out_10024482" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\log-out_10024482.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
